tests/positive/issue3048/Other.juvix
module Other;

type T1 := mkT1;

type T2 := mkT2;

type T3 := mkT3;
