tests/negative/Internal/LoopingCoercion.juvix
module LoopingCoercion;

type Unit := unit;

trait
type T1 A := mkT1 {pp : A -> A};

trait
type T2 A := mkT2 {pp : A -> A};

coercion
fromT1toT2 {A} {{T1 A}} : T2 A := mkT2@{
  pp := T1.pp
};

coercion
fromT2toT1 {A} {{T2 A}} : T1 A := mkT1@{
  pp := T2.pp
};

main : Unit := T1.pp unit;
